# two.avogadro.cc

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CNAME  LICENSE  README.md  _rediraffe_redirected.json  build.html  credits.html  genindex.html  index.html  latex-index.html  objects.inv  plugins2.json  pyproject.toml  releases.py  search.html  searchindex.js  version.txt
.doctrees/: CMakeLists.doctree  build.doctree  credits.doctree  environment.pickle  index.doctree  requirements.doctree
_sources/: build.rst.txt  index.md.txt  index.rst.txt
_static/: documentation_options.js
api/: classlist.html  core.html  index.html  io.html  molequeue.html  qtgui.html  rendering.html  rpc.html  vtk.html
contrib/: ai-usage.html  code-docs.html  code.html  coding-style.html  contributors.html  conventions.html  credits.html  documentation.html  features.html  index.html  style.html  translate.html
develop/: avogadroapp.html  build.html  calc.html  classlist.html  core.html  index.html  io.html  molequeue.html  qtgui.html  qtplugins.html  rendering.html  rpc.html  structure.html  vtk.html
docs/: LICENSE.html  README.html  SUMMARY.html  index.html
install/: build.html  flatpak.html  index.html
public/: .buildinfo  CNAME  genindex.html  index.html  objects.inv  search.html  searchindex.js
scripts/: avogadro-downloads.py  charges.html  commands.html  energy.html  example1.html  example2.html  formats.html  generators.html  github-contributors.py  index.html  install.html  interface.html  releases.py  serpapi-citations.py
source/: conf.py  index.md  latex-index.rst  (+2 more)
(+2989 files in other folders)
