[project]
name = "two-avogadro-cc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "breathe>=4.35.0",
    "linkify-it-py>=2.0.3",
    "myst-parser>=4.0.0",
    "pydata-sphinx-theme>=0.15.4",
    "sphinx>=8.0.2",
    "sphinx-copybutton>=0.5.2",
    "sphinx-design>=0.6.1",
    "sphinxext-rediraffe>=0.2.7",
]
