[project]
name = "two-avogadro-cc"
version = "2.dev0"
description = "Documentation and development website for Avogadro2"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "breathe>=4.35.0",
    "linkify-it-py>=2.0.3",
    "myst-parser>=4.0.0",
    "pydata-sphinx-theme>=0.15.4",
    "sphinx>=8.0.2",
    "sphinx-copybutton>=0.5.2",
    "sphinx-design>=0.6.1",
    "sphinxext-rediraffe>=0.2.7",
    "sphinx-togglebutton>=0.3.2",
    "sphinxcontrib-mermaid>=0.9.2",
]
